--- a/app/src/components/buyer/buyerDashboard.component.html
+++ b/app/src/components/buyer/buyerDashboard.component.html
@@ -87,7 +87,7 @@
           </div>
           <div class="mat-card-container" *ngIf="offerSent && !needToValidateEmail">
             <div class="mat-card-content">
-              <div style="margin-bottom: 5px;">Please check you e-mail to see if the sellers accepts it</div>
+              <div style="margin-bottom: 5px;">Stay tuned! you will be notified by email when the seller accepts/declines your offer.</div>
               <div>Submit another <span class="primary-color" (click)="offerSent = !offerSent">Offer?</span></div>
             </div>
           </div>
