--- a/app/src/components/createSellerItem/sellerItem.component.html
+++ b/app/src/components/createSellerItem/sellerItem.component.html
@@ -8,9 +8,8 @@
   </div>
   <div class="item-content-container">
     <div class="form-container" *ngIf="itemCreated" style="margin-bottom:20px;" id="itemCreatedTxt">
-      <p>Please copy the text below and paste it into your ad: </p>
       <p id="createTxt">
-        Please copy the link below and paste it into your ad. The link will generate your item's photo and default copy inviting buyers to test their offer's viability before sending it to you. Good luck with your sale.
+        Yes! It is available. Free 48 hour money back guarantee when you make your offer through
         <a href="{{itemLink}}"><span class="primary-color">{{itemLink}}</span></a>
       </p>
     </div>
