--- a/app/src/components/createSellerItem/sellerItem.component.html
+++ b/app/src/components/createSellerItem/sellerItem.component.html
@@ -9,8 +9,7 @@
   <div class="item-content-container">
     <div class="form-container" *ngIf="itemCreated" style="margin-bottom:20px;" id="itemCreatedTxt">
       <p id="createTxt">
-        Yes! It is available. Free 48 hour money back guarantee when you make your offer through
-        <a href="{{itemLink}}"><span class="primary-color">{{itemLink}}</span></a>
+          Yes! It is still available. Receive the ShowsApp.com 7 Day Money Back Guarantee when you make your offer through <a href="{{itemLink}}"><span class="primary-color">{{itemLink}}</span></a>, Think of it as a free buyer protection plan for used items.
       </p>
     </div>
     <div class="form-container" *ngIf="!itemCreated">
