--- a/app/src/components/seller/sellerDashboard.component.html
+++ b/app/src/components/seller/sellerDashboard.component.html
@@ -21,8 +21,7 @@
           </button>
         </mat-card-title>
         <mat-card-subtitle>
-          Yes! It is available. Free 48 hour money back guarantee when you make your offer through
-          <a href="{{domain}}/item/{{item.url}}" target="_blank"><span class="accent-color">{{domain}}/item/{{item.url}}</span></a>
+            Yes! It is still available. Receive the ShowsApp.com 7 Day Money Back Guarantee when you make your offer through <a href="{{domain}}/item/{{item.url}}" target="_blank"><span class="accent-color">{{domain}}/item/{{item.url}}</span></a>, Think of it as a free buyer protection plan for used items.
         </mat-card-subtitle>
         <mat-card-content>
           <!--<div class="embed-link"><span class="primary-color" id="item-{{item.id}}">www.showsapp.com/{{item.url}}</span>-->
