--- a/api/templates/markets/item.html
+++ b/api/templates/markets/item.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="profile" />
   <meta property="og:url" content='{% settings_value "DOMAIN" %}/item/{{ item.sa_user.id }}/{{ item.slug }}' />
   <meta property="og:image" content= "{% if item.images.first.gallery_photo_small_url %}{{ item.images.first.gallery_photo_small_url }}{% else %}https://s3.amazonaws.com/showsapp-static-production/static/showsapp.jpg{% endif %}" />
-  <meta property="og:description" content="48 HOUR MONEY BACK GUARANTEE when your offer is accepted through ShowsApp."/>
+  <meta property="og:description" content="7 Day MONEY BACK GUARANTEE when your offer is accepted through ShowsApp."/>
   <meta property="og:site_name" content="ShowsApp.com" />
 
 
